2008-03-31  Frank Ch. Eigler  <fche@elastic.org>

	* configure.ac: Bump version to 0.7.
	* configure: Regenerated.

2008-03-27  Frank Ch. Eigler  <fche@elastic.org>

	* systemtap.base/cmd_parse.exp: Don't assume $SHELL=bash.

2008-03-23  Frank Ch. Eigler  <fche@elastic.org>

	* lib/stap_run.exp (stap_run): Ignore missing debuginfo warnings.
	Try harder to kill stap child in case of timeouts and errors.

2008-03-23  Frank Ch. Eigler  <fche@elastic.org>

	PR 5980.
	* lib/systemtap.exp: Set default Snapshot: value from "stap -V"
	output.

2008-03-21  Eugene Teo  <eugeneteo@kernel.sg>

	PR 5528
	* systemtap.stress/conversions.stp: Test new user_* functions.
	* buildok/conversions.stp: Test new user_* functions.
	* buildok/conversions-embedded.stp: Test new user_* functions.

2008-03-20  Frank Ch. Eigler  <fche@elastic.org>

	PR 5956.
	* semko/fortyfive.stp: New test.

2008-03-15  Frank Ch. Eigler  <fche@elastic.org>

	* systemtap.base/maxactive.exp, probefunc.exp: Standardize pass msg.

2008-03-10  Dave Brolley  <brolley@redhat.com>

	PR5189
	* systemtap.printf/memory1.{stp,exp}: Rewrite to reflect new %m safety checks.
	* systemtap.stress/conversions.exp: Add a test for invalid argument to %m.

2008-03-05  David Smith  <dsmith@redhat.com>

	PR5422
	* systemtap.samples/examples.exp: Updated.

2008-03-03  Frank Ch. Eigler  <fche@elastic.org>

	PR5516
	* buildok/twentynine.stp: New test.

2008-02-27  Dave Brolley  <brolley@redhat.com>

	PR5189
	* systemtap.printf/bin6.{exp,stp}: New test case.
	* systemtap.printf/memory1.{exp,stp}: New test case.

2008-02-27  David Smith  <dsmith@redhat.com>

	* systemtap.base/marker.exp: Added better path to Module.markers.

2008-02-25  Frank Ch. Eigler  <fche@elastic.org>

	PR5792.
	* systemtap.base/preprocessor.exp: New test.

2008-02-23  Frank Ch. Eigler  <fche@elastic.org>

	* systemtap.printf/*.exp: Canonicalize pass/fail messages.

2008-02-23  Frank Ch. Eigler  <fche@elastic.org>
