@@ -1,3 +1,9 @@
+2008-04-04  Masami Hiramatsu <mhiramat@redhat.com>
+
+	PR 5528
+	* systemtap.stress/conversions.exp: Update a script to catch up
+	recently changes of conversions.stp.
+
 2008-03-31  Frank Ch. Eigler  <fche@elastic.org>
 
 	* configure.ac: Bump version to 0.7.
